# red_green_playground

./: .gitignore  .slugignore  ASSETS_STRUCTURE.md  DISTRACTOR_MODE.md  HALLUCINATION_MODE.md  Procfile  README.md  create_stimuli.py  package-lock.json  package.json  pyproject.toml  red_green_playground.py  requirements.txt  server.js
assets/CandidateTrialsNov29_Plots/: CT10C_stimulus.webm  CT11B_stimulus.webm  CT12A_stimulus.webm  CT15B_stimulus.webm  CT22_stimulus.webm  CT2B_stimulus.webm  CT2C_stimulus.webm  CT32_stimulus.webm  CT3A_stimulus.webm  CT3B_stimulus.webm  CT4A_stimulus.webm  CT5B_stimulus.webm  CT5C_stimulus.webm  CT8B_stimulus.webm  CT8C_stimulus.webm
create_stimuli/: package-lock.json  package.json
create_stimuli/src/: App.js  App_variable_speed_snapped_dir.js
public/: index.html
public/CandidateTrialsNov29_Plots/: CT10A_stimulus.webm  CT10B_stimulus.webm  CT11A_stimulus.webm  CT11C_stimulus.webm  CT13A_stimulus.webm  CT13B_stimulus.webm  CT13C_stimulus.webm  CT14A_stimulus.webm  CT14B_stimulus.webm  CT14C_stimulus.webm  CT15C_stimulus.webm  CT17_stimulus.webm  CT18_stimulus.webm  CT19_stimulus.webm  CT1B_stimulus.webm  CT20_stimulus.webm  CT21_stimulus.webm  CT23_stimulus.webm  CT25_stimulus.webm  CT27_stimulus.webm  CT28_stimulus.webm  CT29_stimulus.webm  CT2A_stimulus.webm  CT30_stimulus.webm  CT3C_stimulus.webm  CT4B_stimulus.webm  CT5A_stimulus.webm  CT6B_stimulus.webm  CT6C_stimulus.webm  CT7A_stimulus.webm  CT7B_stimulus.webm  CT7C_stimulus.webm  CT8A_stimulus.webm  (+3 more)
src/: App.js  App.js.backup  App_variable_speed_snapped_dir.js  index.js
(+53 files in other folders)
