[project]
name = "red-green-playground"
version = "0.1.0"
description = "A physics-based simulation playground for creating and visualizing stimuli with red and green sensors"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "pymunk==6.9.0",
    "numpy==2.1.3",
    "tqdm==4.67.1",
    "matplotlib==3.9.2",
    "scipy==1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

